@startuml DLT.TraceLine
interface ITraceLine
abstract class DltTraceLineBase
class DltTraceLine
class DltControlTraceLine

ITraceLine <|.. DltTraceLineBase
DltTraceLineBase <|-- DltTraceLine
DltTraceLineBase <|-- DltControlTraceLine

interface IDltLineBuilder
class DltLineBuilder

class DltSkippedTraceLine
DltTraceLine <|-- DltSkippedTraceLine

IDltLineBuilder <|.. DltLineBuilder
DltLineBuilder --> DltTraceLine : <<creates>>
DltLineBuilder --> DltControlTraceLine : <<creates>>
DltLineBuilder --> DltSkippedTraceLine : <<creates>>
@enduml